# opengl-project

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  vcpkg.json
include/: Camera.h  Cube.h  Player.h  Renderer.h  Texture.h  Time.h
res/shaders/: basic.shader  cross.shader
src/: Camera.cpp  Collider.cpp  Cross.cpp  Cube.cpp  Game.cpp  Player.cpp  Renderer.cpp  Shaders.cpp  Shaders.h  Texture.cpp  Time.cpp  main.cpp
src/include/: Camera.h  Collider.h  Cross.h  Cube.h  Game.h  HitBox.h  Player.h  Renderer.h  Shaders.h  Texture.h  Time.h
